sqlite/conformance/sqlite-sqltests/snapshots/multi_index_intersection__composite-index-preferred-over-intersection-eqp.snap
---
source: multi_index_intersection.sqltest
expression: SELECT id FROM t WHERE a = 10 AND b = 100;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - composite_preference_schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH t USING COVERING INDEX idx_ab (a=? AND b=?)
